<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/header"
        app:srcCompat="@drawable/ic_back_white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintWidth_percent="0.24"
        app:srcCompat="@drawable/ic_oldzy" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/register_label"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_input_login"
        android:hint="@string/name_label"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_input_login"
        android:hint="@string/email_label"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_input_login"
        android:hint="@string/password_label"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_login"
        android:gravity="center"
        android:text="@string/register_v1_label"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/account_exists_label"
        android:textColor="#0071FF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/btnRegister" />

    <FrameLayout
        android:id="@+id/layoutLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#19000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>