<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_splash">

    <fragment
        android:id="@+id/navigation_splash"
        android:name="edu.mb.oldzy.ui.splash.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_navigation_splash_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.mb.oldzy.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="edu.mb.oldzy.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.mb.oldzy.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="edu.mb.oldzy.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_navigation_profile_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>
    <fragment
        android:id="@+id/navigation_login"
        android:name="edu.mb.oldzy.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="edu.mb.oldzy.ui.register.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_create_post"
        android:name="edu.mb.oldzy.ui.post.create_post.CreatePostFragment"
        android:label="Create Post"
        tools:layout="@layout/fragment_create_post">
        <deepLink app:uri="oldzy://create_post" />
        <action
            android:id="@+id/action_navigation_create_post_to_navigation_created_post"
            app:destination="@id/navigation_created_post" />
    </fragment>

    <fragment
        android:id="@+id/navigation_created_post"
        android:name="edu.mb.oldzy.ui.post.create_post.CreatedPostFragment"
        android:label="Created Post"
        tools:layout="@layout/fragment_created_post" />
</navigation>